<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="singidunum.ac.rs.android.busticketreservation.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_marginTop="@dimen/scrollview_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/register_margin_bottom"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.33">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_layout_height"
                    android:layout_marginBottom="@dimen/autocomplete_margin"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/text_padding"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/label_text_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_layout_height"
                    android:layout_marginBottom="@dimen/autocomplete_margin"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/text_padding"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/label_text_size" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signInButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/autocomplete_margin"
                android:background="@drawable/mybutton"
                android:shadowColor="#ff020000"
                android:text="@string/login_button"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
