<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="singidunum.ac.rs.android.busticketreservation.ReservationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_marginBottom="@dimen/register_margin_bottom"
        android:id="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reservationInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/reservation_info"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/search_activity_text_size"
                tools:layout_marginBottom="@dimen/register_margin_bottom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_linear_horizontal_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/availableTicketsLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/available_tickets_label"
                android:textColor="@android:color/black"
                android:textSize="@dimen/search_activity_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_linear_horizontal_height"
            android:layout_weight="109"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/numberOfTickets"
                android:layout_width="@dimen/ticket_reservation_label"
                android:layout_height="match_parent"
                android:layout_marginRight="5sp"
                android:gravity="center_vertical"
                android:text="@string/number_of_tickets"
                android:textColor="@android:color/black"
                android:textSize="@dimen/search_activity_text_size" />

            <EditText
                android:id="@+id/numberOfTicketsButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:inputType="number"
                android:padding="@dimen/text_padding"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/label_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_linear_horizontal_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/autocomplete_layout_height"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textSize="@dimen/search_activity_text_size" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reservationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/mybutton"
        android:shadowColor="#ff020000"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:elevation="0dp"
        android:text="@string/reservation_button"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
