<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="singidunum.ac.rs.android.busticketreservation.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_margin_bottom"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:orientation="vertical"
        tools:layout_marginBottom="@dimen/register_margin_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_linear_horizontal_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="@dimen/register_label_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="@dimen/search_activity_text_size" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/text_padding"
                android:layout_weight="1"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_linear_horizontal_height"
            android:layout_marginTop="@dimen/layout_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="@dimen/register_label_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="@dimen/search_activity_text_size" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/text_padding"
                android:layout_weight="1"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_linear_horizontal_height"
            android:layout_marginTop="@dimen/layout_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="@dimen/register_label_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/search_activity_text_size" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/text_padding"
                android:layout_weight="1"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_linear_horizontal_height"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_weight="0.02"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="@dimen/register_label_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/confirm_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/search_activity_text_size" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/text_padding"
                android:layout_weight="1"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/registerFormButton"
        android:layout_width="@dimen/registerButtonWidth"
        android:layout_height="@dimen/registerButtonHeight"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/register_button_margin"
        android:background="@drawable/mybutton"
        android:shadowColor="#ff020000"
        android:text="@string/register_button"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold" />

</RelativeLayout>
