<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="singidunum.ac.rs.android.busticketreservation.SearchActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/search_activity_margin_bottom"
            android:layout_marginTop="@dimen/search_activity_margin_top"
            android:gravity="center_horizontal"
            android:text="@string/from"
            android:textColor="@android:color/black"
            android:textSize="@dimen/search_activity_text_size" />

        <AutoCompleteTextView
            android:id="@+id/cityFromTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/autocomplete_layout_height"
            android:layout_marginBottom="@dimen/autocomplete_margin"
            android:layout_marginLeft="@dimen/autocomplete_margin"
            android:layout_marginRight="@dimen/autocomplete_margin"
            android:layout_weight="1"
            android:background="@drawable/edit_text_style"
            android:maxLines="1"
            android:minLines="1"
            android:textCursorDrawable="@null"
            android:padding="@dimen/text_padding"
            android:textColor="@android:color/black"
            android:inputType="textNoSuggestions"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/search_activity_margin_bottom"
            android:gravity="center_horizontal"
            android:text="@string/to"
            android:textColor="@android:color/black"
            android:textSize="@dimen/search_activity_text_size" />

        <AutoCompleteTextView
            android:id="@+id/cityToTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/autocomplete_layout_height"
            android:layout_marginLeft="@dimen/autocomplete_margin"
            android:layout_marginRight="@dimen/autocomplete_margin"
            android:layout_marginBottom="@dimen/autocomplete_margin"
            android:layout_weight="1"
            android:background="@drawable/edit_text_style"
            android:maxLines="1"
            android:minLines="1"
            android:padding="@dimen/text_padding"
            android:textCursorDrawable="@null"
            android:textColor="@android:color/black"
            android:inputType="textNoSuggestions"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/search_activity_margin_bottom"
            android:gravity="center_horizontal"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textSize="@dimen/search_activity_text_size" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/datePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/autocomplete_margin"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        style="?android:attr/borderlessButtonStyle"
        app:srcCompat="@drawable/calendar" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton"
        android:shadowColor="#ff020000"
        android:padding="@dimen/text_padding"
        android:text="@android:string/search_go"
        android:textColor="#ffffff"
        android:textSize="@dimen/search_activity_button_text_size"
        android:textStyle="bold"
        android:layout_below="@+id/datePickerButton"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
